@@ -1,6 +1,7 @@
 2018-10-xx 1.7.0 [xxxxxxx]
   + tree view allows to navigate interactively
   + new sibling and new child diagrams can be created in tree view
+  + when deleting a diagram, unfocused windows show parent diagram
 2018-10-15 1.6.1 [3d25d8a]
   + debian archives are now build by dh_make and debuild
   + fix for only partly visible background text
